--- a/packages/document/docs/zh/guide/basic/deploy.mdx
+++ b/packages/document/docs/zh/guide/basic/deploy.mdx
@@ -171,14 +171,14 @@ jobs:
 
 2. 通过 Git 提供商授权 Kinsta。
 
-3. 从左侧边栏选择**静态网站**，然后点击**添加网站**。
+3. 从左侧边栏选择 **Static Sites**，然后点击 **Add sites**。
 
-4. 选择要部署的仓库和分支。
+4. 选择需要部署的仓库和分支。
 
-5. 在构建设置过程中，Kinsta 会尝试自动填写**构建命令**、**Node 版本**和**发布目录**。否则，请填写以下内容：
+5. 在构建设置中，Kinsta 会尝试自动填写 **Build command**、**Node version** 以及 **Publish directory**。如果没有自动填写，请填写以下内容：
 
    - 构建命令: `npm run build`
    - Node 版本: `18.16.0`
    - 发布目录: `doc_build`
 
-6. 点击**创建网站**。
+6. 点击 **Create site**。
