feat: translate deploy document to chinese version

--- a/packages/document/docs/zh/guide/basic/deploy.mdx
+++ b/packages/document/docs/zh/guide/basic/deploy.mdx
@@ -165,7 +165,7 @@ jobs:
 
 ### 通过 Kinsta 部署
 
-您可以在 [Kinsta](https://kinsta.com/static-site-hosting/) 上部署你的 Rspress 网站。
+你可以在 [Kinsta](https://kinsta.com/static-site-hosting/) 上部署你的 Rspress 网站。
 
 1. 登录或创建账户，来查看你的 [MyKinsta](https://my.kinsta.com/) 面板。
 
