docs: optimize last-updated plugin doc

--- a/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
@@ -10,7 +10,7 @@ import { PackageManagerTabs } from '@theme';
 
 :::tip Tip
 
-When you have configured `lastUpdated: true` in the default theme, this plugin will be automatically activated.
+When you have configured `lastUpdated: true` in the default theme, this plugin will be automatically activated. You don't need to install and register it manually.
 
 :::
 
