--- a/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
@@ -10,7 +10,7 @@ import { PackageManagerTabs } from '@theme';
 
 :::tip 提示
 
-当你在默认主题中配置了 `lastUpdated: true` 时，该插件会自动生效。
+当你在默认主题中配置了 `lastUpdated: true` 时，该插件会自动生效，不需要你去安装和注册插件。
 
 :::
 
