feat: add sidebar slots

--- a/packages/document/docs/zh/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/zh/guide/advanced/custom-theme.mdx
@@ -66,6 +66,10 @@ const Layout = () => (
     beforeNavTitle={<span>😄</span>}
     /* 左上角导航栏标题之后 */
     afterNavTitle={<div>afterNavTitle</div>}
+    /* 左侧侧边栏上面 */
+    beforeSidebar={<div>beforeSidebar</div>}
+    /* 左侧侧边栏下面 */
+    afterSidebar={<div>afterSidebar</div>}
     /* 右侧大纲栏上面 */
     beforeOutline={<div>beforeOutline</div>}
     /* 右侧大纲栏下面 */
