--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -64,9 +64,12 @@ const Layout = () => (
     beforeNav={<div>beforeNav</div>}
     /* Before the title of the nav bar in the upper left corner */
     beforeNavTitle={<span>😄</span>}
-    /* After the title of the nav bar in the upper left corner
-     */
+    /* After the title of the nav bar in the upper left corner */
     afterNavTitle={<div>afterNavTitle</div>}
+    /* Above the left sidebar */
+    beforeSidebar={<div>beforeSidebar</div>}
+    /* Below the left sidebar */
+    afterSidebar={<div>afterSidebar</div>}
     /* Above the right outline column */
     beforeOutline={<div>beforeOutline</div>}
     /* Below the outline column on the right */
