feat: support url query to disable global ui components

--- a/packages/document/docs/en/guide/basic/custom-page.mdx
+++ b/packages/document/docs/en/guide/basic/custom-page.mdx
@@ -145,6 +145,7 @@ navbar: false
 sidebar: false
 outline: false
 footer: false
+globalUIComponents: false
 ---
 ```
 
@@ -163,3 +164,4 @@ With URL parameters, you can quickly adjust the layout structure of the page wit
 - `sidebar`: Whether to display the sidebar. When you want to hide the sidebar, you can set it to `0`.
 - `outline`: Whether to display the outline column. When you want to hide the outline column, you can set it to `0`.
 - `footer`: Whether to display the footer. When you want to hide the footer, you can set it to `0`.
+- `globalUIComponents`: Whether to display the global components. When you want to hide the global components, you can set it to `0`.
