--- a/packages/document/docs/zh/guide/basic/custom-page.mdx
+++ b/packages/document/docs/zh/guide/basic/custom-page.mdx
@@ -137,6 +137,7 @@ import PageType from '@zh/fragments/page-type';
 - `sidebar`：是否展示侧边栏，当你想要隐藏侧边栏时，可以配置为 `false`；
 - `outline`：是否展示大纲栏，当你想要隐藏大纲栏时，可以配置为 `false`；
 - `footer`：是否展示页脚，当你想要隐藏页脚时，可以配置为 `false`；
+- `globalComponents`: 是否展示全局组件，当你想要隐藏全局组件时，可以配置为 `false`。
 
 示例：
 
@@ -146,6 +147,7 @@ navbar: false
 sidebar: false
 outline: false
 footer: false
+globalUIComponents: false
 ---
 ```
 
@@ -164,3 +166,4 @@ http://YOUR_DOMAIN/foo?navbar=0&outline=0
 - `sidebar`：是否展示侧边栏，当你想要隐藏侧边栏时，可以配置为 `0`；
 - `outline`：是否展示大纲栏，当你想要隐藏大纲栏时，可以配置为 `0`；
 - `footer`：是否展示页脚，当你想要隐藏页脚时，可以配置为 `0`；
+- `globalUIComponents`：是否展示全局组件，当你想要隐藏全局组件时，可以配置为 `0`。
