--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -484,3 +484,20 @@ export default defineConfig({
   },
 });
 ```
+
+## sourceCodeText
+
+- Type: `string`
+- Default: `Source`
+
+源代码按钮的文本。比如：
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    sourceCodeText: 'Source',
+  },
+});
+```
