--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -500,3 +500,20 @@ export default defineConfig({
   },
 });
 ```
+
+## sourceCodeText
+
+- Type: `string`
+- Default: `Source`
+
+The text of the source code button. for example:
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    sourceCodeText: 'Source',
+  },
+});
+```
