--- a/packages/document/docs/zh/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/overview.mdx
@@ -8,3 +8,4 @@
 - [@rspress/plugin-typedoc](./typedoc)： [TypeDoc](https://github.com/TypeStrong/typedoc) 集成插件，用于自动生成 TS 模块的 API 文档。
 - [@rspress/plugin-preview](./preview)：支持代码块中的组件预览。
 - [@rspress/plugin-playground](./playground)：支持代码块中的组件预览，并提供实时 Playground。
+- [rspress-plugin-translate](./translate)：集成插件，用于自动翻译文档。
