--- a/packages/document/docs/zh/guide/default-theme/i18n.mdx
+++ b/packages/document/docs/zh/guide/default-theme/i18n.mdx
@@ -3,8 +3,8 @@
 在 Rspress 中实现文档的国际化，你需要做如下的操作:
 
 - 1. 定义 I18n 文本数据。
-- 2. 配置默认语言。
-- 3. 配置 `locales` 和 `themeConfig.locales`。
+- 2. 配置 `locales` 和 `themeConfig.locales`。
+- 3. 配置默认语言。
 - 4. 新建不同的语言版本的文档。
 - 5. 配置侧边栏和导航栏。
 - 6. 自定义组件中使用 `useI18n`。
@@ -55,20 +55,6 @@ export interface I18n {
 
 这些文本数据在**配置文件**和**自定义组件**中都会用到，后文会详细介绍。
 
-## 配置默认语言
-
-在 `rspress.config.ts`中，你可以通过 `lang` 配置文档的默认语言，如下例子所示:
-
-```ts title="rspress.config.ts"
-import { defineConfig } from 'rspress/config';
-
-export default defineConfig({
-  lang: 'zh',
-});
-```
-
-这很重要，因为**对于默认语言下的路由，框架会去掉语言前缀**，比如 `/zh/guide/getting-started` 会被转换为 `/guide/getting-started`。
-
 ## 配置 `locales` 数据
 
 在 `rspress.config.ts`中，你可以通过两个地方来配置 `locales` 数据:
@@ -117,6 +103,21 @@ export default defineConfig({
 :::
 
 对于其它的国际化主题参数配置，请参考 [API 类型](/api/config/config-theme#locales)。
+
+## 配置默认语言
+
+在配置完 `locales` 之后，你需要通过 `lang` 配置文档的默认语言，如下例子所示:
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  lang: 'zh',
+});
+```
+
+这很重要，因为**对于默认语言下的路由，框架会去掉语言前缀**，比如 `/zh/guide/getting-started` 会被转换为 `/guide/getting-started`。
+
 
 ## 新建不同的语言版本的文档
 
