--- a/packages/document/docs/en/guide/advanced/custom-search.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-search.mdx
@@ -108,7 +108,7 @@ Note that the return value of the `onSearch` hook function is an array, each ite
 {
   group: string; // The group name of the search result, which will be displayed in the search results.
   result: unknown;
-  renderType: RenderType; // The type of the search result, which can be `RenderType.Default` or `RenderType.Custom`.
+  renderType: RenderType; // The type of the search result, which can be `RenderType.Default` or `RenderType.Custom`. `RenderType.custom` by default.
 }
 ```
 
