--- a/packages/document/docs/zh/guide/advanced/custom-search.mdx
+++ b/packages/document/docs/zh/guide/advanced/custom-search.mdx
@@ -108,7 +108,7 @@ export { onSearch };
 {
   group: string; // 搜索结果的分组名称，将会在搜索结果中显示
   result: unknown;
-  renderType?: RenderType; // 搜索结果的渲染类型，支持 Default 和 Custom 两种类型
+  renderType?: RenderType; // 搜索结果的渲染类型，支持 Default 和 Custom 两种类型。如果不填，默认取 RenderType.Custom
 }
 ```
 
