chore: preserve demo snopshot

--- a/e2e/fixtures/plugin/doc/index.mdx
+++ b/e2e/fixtures/plugin/doc/index.mdx
@@ -2,11 +2,12 @@
 
 ```jsx
 export default function HelloWorld() {
-  return <div>这是 solidjs 渲染的结果</div>;
+  return <div>这是 solidjs 渲染的结果11</div>;
 }
 ```
 
 ```jsx
+// 如果要引入自定义的外部组件，可以使用 tsconfig.json 中的 paths 别名配置
 export default function HelloWorld() {
   return <div>这是 solidjs 渲染的结果</div>;
 }
