feat(presetIcons): new social platform for social links - X feat(SourceCode): support for gitlab platform for button fixed(document): updated social links content feat(SocialLinkIcon): Added new social icon type - X

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -357,13 +357,14 @@ export type SocialLinkIcon =
   | 'slack'
   | 'twitter'
   | 'youtube'
-  | 'weixin'
+  | 'wechat'
   | 'qq'
   | 'juejin'
   | 'zhihu'
   | 'bilibili'
   | 'weibo'
   | 'gitlab'
+  | 'X'
   | { svg: string };
 ```
 
