--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -343,13 +343,14 @@ export type SocialLinkIcon =
   | 'slack'
   | 'twitter'
   | 'youtube'
-  | 'weixin'
+  | 'wechat'
   | 'qq'
   | 'juejin'
   | 'zhihu'
   | 'bilibili'
   | 'weibo'
   | 'gitlab'
+  | 'X'
   | { svg: string };
 ```
 
