feat(theme-default): Scroll to top button on docs | enableScrollToTop (#622)

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -557,3 +557,20 @@ export default defineConfig({
   },
 });
 ```
+
+## enableScrollToTop
+
+- Type: `boolean`
+- Default: `false`
+
+Enable scroll to top button on documentation. For example:
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    enableScrollToTop: true,
+  },
+});
+```
