feat: add afterDocFooter slot for custom theme

--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -56,6 +56,8 @@ const Layout = () => (
     afterFeatures={<div>afterFeatures</div>}
     /* Before doc footer */
     beforeDocFooter={<div>beforeDocFooter</div>}
+    /* After doc footer */
+    afterDocFooter={<div>afterDocFooter</div>}
     /* Doc page front */
     beforeDoc={<div>beforeDoc</div>}
     /* Doc page end */
