--- a/packages/document/docs/zh/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/zh/guide/advanced/custom-theme.mdx
@@ -56,6 +56,8 @@ const Layout = () => (
     afterFeatures={<div>afterFeatures</div>}
     /* 正文页 Footer 部分之前 */
     beforeDocFooter={<div>beforeDocFooter</div>}
+    /* 正文页 Footer 部分之后 */
+    afterDocFooter={<div>afterDocFooter</div>}
     /* 正文页最前面 */
     beforeDoc={<div>beforeDoc</div>}
     /* 正文页最后面 */
