feat(preview): add support for custom iframe buildConfig

--- a/packages/document/docs/en/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/preview.mdx
@@ -159,6 +159,10 @@ In iframe preview mode, you can choose the rendering framework, currently suppor
 
 In the iframe preview mode, you can configure the dev server port of the preview component.
 
+### iframeOptions.builderConfig
+
+Configure the buildConfig of the iframe, such as adding some global code.
+
 ### deprecated: isMobile
 
 From v1.12.0, please use [previewMode](#previewmode) instead.
