--- a/packages/document/docs/zh/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/preview.mdx
@@ -161,6 +161,10 @@ export default App;
 
 在 iframe 预览模式下，你可以配置预览组件的 dev server port。
 
+### iframeOptions.builderConfig
+
+配置 iframe 的构建配置，例如添加一些全局代码逻辑。
+
 ### deprecated: isMobile
 
 从 1.12.0 版本开始，请使用 [previewMode](#previewmode) 配置预览模式。
