--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -15,8 +15,8 @@ If you want to develop a custom theme from scratch, you can go to [Redevelop a c
 By default, you need to create a `theme` directory under the project root directory, and then create an `index.ts` or `index.tsx` file under the `theme` directory, which is used to export the theme content.
 
 ```bash
-├── theme
-│   └── index.tsx
+└── theme
+    └── index.tsx
 ```
 
 You can write the `theme/index.tsx` file as follows:
@@ -124,12 +124,12 @@ Of course, you may need to use page data during the development process, you can
 If you want to modify the icons used in the default theme component individually, just put the icons with the same name in the theme/assets directory.
 
 ```bash
-├── theme
-│   └── assets
-│     └── xx.svg
+└── theme
+    └── assets
+        └── xx.svg
 ```
 
-[Look](https://github.com/web-infra-dev/rspress/tree/main/packages/theme-default/src/assets)All icons used in the default theme.
+You can view all the icons used in the default theme [here](https://github.com/web-infra-dev/rspress/tree/main/packages/theme-default/src/assets).
 
 ## Redevelop a custom theme
 
