--- a/packages/document/docs/en/guide/basic/custom-page.mdx
+++ b/packages/document/docs/en/guide/basic/custom-page.mdx
@@ -1,3 +1,5 @@
+import { PackageManagerTabs } from '@theme';
+
 # Customizing Page
 
 Rspress provides several ways for you to customize the content of your pages, including:
@@ -63,8 +65,7 @@ export default defineConfig({
 
 Then you can add the following code:
 
-```css
-/* styles/index.css */
+```css title="styles/index.css"
 :root {
   --rp-c-brand: #f00;
 }
@@ -74,9 +75,7 @@ In this way, the framework will automatically collect all global styles and merg
 
 Here are some commonly used global styles:
 
-```css
-/* styles/index.css */
-
+```css title="styles/index.css"
 :root {
   /* Modify theme color */
   --rp-c-brand: #f00;
@@ -96,6 +95,49 @@ Here are some commonly used global styles:
 ```
 
 > If you want to know more about the internal global styles, you can check [vars.css](https://github.com/web-infra-dev/rspress/blob/main/packages/core/src/theme-default/styles/vars.css)
+
+### Tailwind CSS
+
+In order to get Tailwind CSS working with Rspress, you can use the following steps:
+
+1. Install Tailwind CSS and its dependencies:
+
+<PackageManagerTabs command="install tailwindcss postcss autoprefixer -D" />
+
+2. Create a `postcss.config.js` file containing `tailwindcss` and `autoprefixer` plugins:
+
+```js title="postcss.config.js"
+module.exports = {
+  plugins: {
+    tailwindcss: {},
+    autoprefixer: {},
+  },
+};
+```
+
+3. Create a `tailwind.config.js` file and make sure all the content files are included:
+
+```js title="tailwind.config.js"
+module.exports = {
+  content: ['./src/**/*.tsx'],
+  theme: {
+    extend: {},
+  },
+  plugins: [],
+};
+```
+
+:::tip TIP
+You can also include and style React component directly in the `.mdx` files by including those files in the `content` value, such as `content: ['./src/**/*.tsx', './docs/**/*.mdx']`.
+:::
+
+4. Include the Tailwind directives in your CSS styles file from [Custom Styles](#custom-styles):
+
+```css title=styles/index.css
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+```
 
 ## Custom Layout Structure
 
